--- a/Frontend/cenndiii-shop/src/index.css
+++ b/Frontend/cenndiii-shop/src/index.css
@@ -30,3 +30,15 @@
     visibility: visible;
     opacity: 1;
 }
+
+/* Ẩn spinner trên Chrome, Safari, Edge */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Ẩn spinner trên Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
