--- a/Frontend/cenndiii-shop/src/index.css
+++ b/Frontend/cenndiii-shop/src/index.css
@@ -2,6 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  font-size: 12px !important; /* Hoặc 12px nếu muốn nhỏ hơn */
+}
+
 
 .custom-tooltip {
     position: relative;
